# types.ts
@@ -39,10 +39,8 @@ export type DataEditChannel = schema.components['schemas']['DataEditChannel'];
 export type FieldsChannel = schema.components['schemas']['FieldsChannel'];
 export type Invite = schema.components['schemas']['Invite'];
 export type Message = schema.components['schemas']['Message'];
-export type Content = schema.components['schemas']['Content'];
 export type SystemMessage = schema.components['schemas']['SystemMessage'];
-export type DateTimeContainer = schema.components['schemas']['DateTimeContainer'];
-export type DateTime = schema.components['schemas']['DateTime'];
+export type ISO8601_Timestamp = schema.components['schemas']['ISO8601 Timestamp'];
 export type Embed = schema.components['schemas']['Embed'];
 export type Special = schema.components['schemas']['Special'];
 export type TwitchType = schema.components['schemas']['TwitchType'];
@@ -66,6 +64,7 @@ export type CreateVoiceUserResponse = schema.components['schemas']['CreateVoiceU
 export type Data = schema.components['schemas']['Data'];
 export type Override = schema.components['schemas']['Override'];
 export type DataDefaultChannelPermissions = schema.components['schemas']['DataDefaultChannelPermissions'];
+export type CreateServerResponse = schema.components['schemas']['CreateServerResponse'];
 export type Server = schema.components['schemas']['Server'];
 export type Category = schema.components['schemas']['Category'];
 export type SystemMessageChannels = schema.components['schemas']['SystemMessageChannels'];
